<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".NewMark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/newMarkTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocena_tytul"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameMarkTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ocena_za_co"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/nameMarkET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/background"
            android:background="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valueMarkTV"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/ocena_wartosc_liczba"
                android:textColor="@color/main"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/pointsMarkTV"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/ocena_wartosc_procent"
                android:textColor="@color/main"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/markMarkNP"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        <NumberPicker
            android:id="@+id/percentMarkNP"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/newMarkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main"
        android:text="@string/ocena_dodaj"
        android:textColor="@color/background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_margin="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>